# vgi-sigma

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  sigma_worker.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: check.test  match.test  metadata.test
tests/: harness.py  test_engine.py  test_scalars.py  test_tables.py
vgi_sigma/: __init__.py  engine.py  meta.py  scalars.py  schema_utils.py  tables.py
